# dolphin-gdrive-actions

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: project.mdc
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
config/: config.example.toml
docs/: reddit-draft.md
servicemenus/: README.md
src/dolphin_gdrive_actions/: __init__.py  __main__.py  browser.py  cli.py  clipboard.py  commands.py  config.py  drive_account.py  drive_metadata.py  errors.py  integration.py  manifest.py  mount_detect.py  notify.py  paths.py  paths_util.py  rclone.py  remote_resolve.py  servicemenu_diag.py
src/dolphin_gdrive_actions/data/: config.example.toml
src/dolphin_gdrive_actions/data/servicemenus/: google-drive-new.desktop  google-drive.desktop
tests/: test_browser.py  test_clipboard.py  test_commands_copy_link.py  test_commands_new.py  test_commands_open_copy_link.py  test_commands_share_offline.py  test_config.py  test_drive_account.py  test_drive_metadata.py  test_integration.py  test_mount_detect.py  test_paths.py  test_rclone_metadata.py  test_remote_resolve.py  test_servicemenu_diag.py
