[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dolphin-gdrive-actions"
version = "0.1.0"
description = "Google Drive-style right-click actions for KDE Dolphin on rclone mounts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "sktk4" }]
keywords = ["kde", "dolphin", "google-drive", "rclone"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: KDE",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: KDE",
]

[project.scripts]
dga = "dolphin_gdrive_actions.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dolphin_gdrive_actions = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
